@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-19T16:29:23Z",
-  "count" : 3,
+  "timestamp" : "2022-10-03T08:29:41Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
