@@ -1,10 +1,10 @@
 {
-  "count": 40,
+  "count": 39,
   "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
