@@ -1,3 +1,11 @@
+2022-10-03T08:29:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3172693888
+* notice: last 14d: unq all: 9 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 619 2461 / 643 2501
+* notice: next accum: outdated-unq outdated-all / unq all: 619 2461 / 643 2500
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
+* notice: removed / changed dates: [] / [2022-09-19]
+
 2022-10-03T01:51:39Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3170979702
 * notice: last 14d: unq all: 9 40
